--- a/src/p2-homeworks/h1/Message.module.css
+++ b/src/p2-homeworks/h1/Message.module.css
@@ -1,3 +1,56 @@
 .message {
+  display: flex;
+  widows: 350px;
+  min-height: 100px;
+  margin-bottom: 10px;
+}
+.avatar {
+  display: flex;
+  width: 50px;
+  height: 50px;
+  align-self: flex-end;
+  background-color: white;
+  border-radius: 50%;
+}
+.avatar img {
+  max-width: 100%;
+  border-radius: 50%;
+}
 
+.messageBlock {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 100px;
+  width: 300px;
+  background-color: rgb(255, 228, 196);
+  border-radius: 5px 5px 5px 0px;
+  box-sizing: border-box;
+  padding: 10px;
+}
+.messageBlock::after {
+  content: "";
+  width: 15px;
+  height: 15px;
+  position: relative;
+  bottom: -10px;
+  left: -25px;
+  background: radial-gradient(
+    circle at 0 0,
+    rgba(0, 0, 0, 0) 15px,
+    rgb(255, 228, 196) 0
+  );
+}
+
+.name {
+  color: teal;
+}
+.text {
+  word-wrap: break-word;
+}
+.time {
+  display: flex;
+  align-self: flex-end;
+  color: tomato;
+  font-weight: bold;
 }
